hphp/test/zend/bad/ext-spl/bug54292.php
<?php

try {
	new SplFileObject('foo', array());
} catch (Exception $e) {
	var_dump($e->getMessage());
}

?>